# stockage

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  data.xork  setting.nn  vcpkg.json
src/: appmanager.cxx  appmanager.hxx  main.cc  stokage.cxx  stokage.hxx
